tests/paczka1/fuzzy1/72364215.err
Error in line 2: w\DZ S380 36,3
Error in line 7: QpsAcANu S891 95,0
Error in line 15: QpsAcANu S380 32,1
Error in line 36: RpaGKze S917 28,9
